# agentpy

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  clean.py  paper.bib  paper.md  requirements.txt  setup.cfg  setup.py  tox.ini
agentpy/: __init__.py  agent.py  analysis.py  datadict.py  examples.py  experiment.py  framework.py  grid.py  interactive.py  lists.py  model.py  network.py  objects.py  output.py  sample.py  sampling.py  sequences.py  space.py  tools.py  version.py  visualization.py
docs/: Agentpy_Button_Network.ipynb  Agentpy_Forest_Fire.ipynb  Agentpy_Virus_Spread.ipynb  Agentpy_Wealth_Transfer.ipynb  T01_Wealth_Transfer.ipynb  about.rst  agentpy_button_network.ipynb  agentpy_demo.py  agentpy_forest_fire.ipynb  agentpy_segregation.ipynb  agentpy_virus_spread.ipynb  agentpy_wealth_transfer.ipynb  changelog.rst  comparison.rst  conf.py  contribute.rst  contributing.rst  guide.rst  guide_ema.ipynb  guide_interactive.ipynb  guide_random.ipynb  index.rst  installation.rst  mesa_demo.py  model_library.rst  models.rst  overview.rst  reference.rst  reference_agents.rst  reference_analysis.rst  reference_data.rst  reference_environments.rst  reference_examples.rst  reference_experiment.rst  reference_experiments.rst  reference_grid.rst  reference_model.rst  reference_models.rst  reference_network.rst  reference_other.rst  (+8 more)
paper/: paper.bib  paper.md
tests/: test_agent_list.py  test_analysis.py  test_datadict.py  test_environments.py  test_examples.py  test_experiment.py  test_framework.py  test_grid.py  test_init.py  test_lists.py  test_model.py  test_network.py  test_objects.py  test_output.py  test_sample.py  test_sampling.py  test_sequences.py  (+4 more)
(+3 files in other folders)
