[metadata]
version = 0.1.2.dev

[options]
packages = find:
python_requires = >=3.6
setup_requires = pytest-runner
tests_require = pytest, pytest-cov
install_requires =
    importlib-metadata ~= 1.0 ; python_version < "3.8"
    numpy >= 1.19
    scipy >= 1.5.2
    matplotlib >= 3.3.3
    networkx >= 2.5
    pandas >= 1.1.3
    SALib >= 1.3.7

[options.extras_require]
docs =
    sphinx >= 3.2.1
    nbsphinx >= 0.7.1
    sphinx_rtd_theme >= 0.4.3
dev =
    setuptools >= 51.3.3
    pytest >= 5.4.3
    coverage >= 5.3
    sphinx >= 3.2.1
    nbsphinx >= 0.7.1
    sphinx_rtd_theme >= 0.4.3

